<resources>
    <string name="app_name">College Checklist</string>
    <string name="action_settings">Settings</string>
    <string name="bedbtntext">Beddings</string>
    <string name="tltrsbtntext">Toiletries</string>
    <string name="splsbtntext">Supplies</string>
    <string name="devsbtntext">Electronics</string>
    <string name="persbtntext">Personal</string>
    <string name="otherbtntext">Other</string>

    <string name="bedcheckboxhint">ex. 2 Pillowcases</string>
    <string name="poptexttitle">Add Item:</string>
    <string name="poptextbtn">Add Item</string>
    <string name="itemName">Bed</string>
    <string name="canceltxt">Cancel</string>
    <string name="renamebtntext">Rename</string>
    <string name="deletebtntext">Delete</string>
    <string name="renametext">Type the new item name:</string>
    <string name="deletequestion">Are you sure you want to delete this?</string>
    <string name="medbtntext">Medication</string>
    <string name="clthsBtnText">Apparel</string>
    <string name="clear_list">Clear List</string>
    <string name="clear_list_text">Do you want to clear the entire list?</string>
    <string name="export_list">Export List</string>
    <string name="exportListTxt">Would you like to download this list?</string>
</resources>
